--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,6 +1,7 @@
 name: Backend Deploy
-workflow_dispatch:   
+
 on:
+  workflow_dispatch:   # enables Run workflow
   push:
     paths:
       - 'backend/**'
@@ -25,6 +26,9 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
 
+      - name: Who am I? (sanity check)
+        run: aws sts get-caller-identity
+
       - name: Terraform Init
         working-directory: backend
         run: terraform init
@@ -43,6 +47,8 @@ jobs:
 
       - name: Update GitHub Secrets
         run: |
+          echo "Setting API_URL=$api_url"
+          echo "Setting CLOUDFRONT_DIST_ID=$cloudfront_dist_id"
           gh secret set API_URL -b"$api_url"
           gh secret set CLOUDFRONT_DIST_ID -b"$cloudfront_dist_id"
         env:
